<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>it.project.mim.food</groupId>
  <artifactId>MiM_Project_Food</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
	  <dependency>
		<groupId>io.undertow</groupId>
		<artifactId>undertow-core</artifactId>
		<version>2.0.21.Final</version>
	  </dependency>
	<dependency>
	    <groupId>org.json</groupId>
	    <artifactId>json</artifactId>
	    <version>20180813</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.httpcomponents</groupId>
   		<artifactId>httpclient</artifactId>
   		<version>4.5.3</version>
	</dependency>
	<dependency>
    	<groupId>com.google.code.gson</groupId>
   		<artifactId>gson</artifactId>
    	<version>2.8.0</version>
</dependency>
 </dependencies>
</project>